<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_merch"
            android:icon="@drawable/ic_baseline_checkroom_24"
            android:title="@string/merch" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_burger"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/create_burger" />
        <item
            android:id="@+id/nav_beer"
            android:icon="@drawable/ic_baseline_local_drink_24"
            android:title="Beer" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="@string/credits" />
    </group>
</menu>