<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.BurgerFragment">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navy"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/welcome_to_burger_customization"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bun"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brioche_plain_sesame_seed_pretzel"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/yellow"
            app:boxBackgroundColor="@color/navy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bun_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/bun_type"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/bunChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/yellow"
                android:background="@color/navy"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/burger_type"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/turkey_chicken_beef_veggie_fish"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/yellow"
                app:boxBackgroundColor="@color/navy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/burgerTypeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/meat"
                    android:textColor="@color/yellow"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/burger_type_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:background="@color/navy"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cheese"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/american_swiss_cheddar_montery_jack_pepper_jack_provolone_none"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/yellow"
                app:boxBackgroundColor="@color/navy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cheeseTypeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/cheese_type"
                    android:textColor="@color/yellow" />

                <TextView
                    android:id="@+id/cheese_type_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:background="@color/navy"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toppings"
                android:textSize="30sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:id="@+id/relishBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/relish"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/ketchupBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/ketchup"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/mustardBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/mustard"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/mayoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/mayo"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/lettuceBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/lettuce"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/tomatoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/tomato"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/onionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/onions"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/mushroomBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/mushrooms"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/jalapenoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/jalapenos"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/eggBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/fried_egg"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/friesBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/fries"
                android:textColor="@color/yellow" />


            <CheckBox
                android:id="@+id/ringsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navy"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/onion_rings"
                android:textColor="@color/yellow" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order"
                android:backgroundTint="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>


