<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Fragments.HomePageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingBottom="10dp"
            android:text="@string/welcome_to_puddins_pub_and_grill"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/a_picture"
            android:src="@drawable/puddins_pub_logo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/puddins_pub_and_grill_is_a_family_ran_business_that_strives_on_producing_great_food_and_even_better_beer"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/contactEmail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navy"
            android:text="@string/contact_us"
            android:textColor="@color/yellow"
            app:icon="@android:drawable/sym_action_email"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/contactCall_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navy"
            android:text="@string/contact_us"
            android:textColor="@color/yellow"
            app:icon="@android:drawable/stat_sys_phone_call" />

        <Button
            android:id="@+id/socialMedia_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navy"
            android:text="@string/check_us_out_on_instagram"
            android:textColor="@color/yellow"
            app:icon="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navy"
            android:text="@string/location"
            android:textColor="@color/yellow"
            app:icon="@android:drawable/ic_menu_mapmode" />

    </LinearLayout>
</ScrollView>

